
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_2__ ;
typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_4__ {scalar_t__ name; } ;
struct TYPE_3__ {scalar_t__ t; } ;


 int printf (char*) ;
 TYPE_2__* shellcodes ;
 TYPE_1__* targets ;

int validate_args(int port, int sh, int itarget)
{
 int i=0,x=0;
 for(i=0;shellcodes[i].name;i++)if(i==sh)x=1;
    if(x==0)
 {
  printf("[-] The shellcode number is invalid\n");
  return -1;
 }
 x=0;
 for(i=0;targets[i].t;i++)if(i==itarget)x=1;
 if(x==0)
 {
  printf("[-] The target is invalid\n");
  return -1;
 }
 return 1;
}
